--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,8 @@ section {
 	z-index: 9999;
 	-webkit-transition: .4s;
 	transition: .4s;
-	background:#001f46;
+	/*background:#001f46;*/
+	background:#BC1823;
 }
 .logo a {
 	font-size: 24px;
@@ -310,7 +311,7 @@ a.slide-btn {
 	border-radius:0 15px;
 }
 a.slide-btn:hover {
-	background:#001f46;
+	background:#BC1823;
 	color: #fff;	
 }
 .single-slide-item h2 {
@@ -471,7 +472,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
   margin-bottom: 30px;
   padding: 30px 20px;
   transition: all 0.45s ease-in-out 0s;
-  background:#001f46;
+  background:#BC1823;
   border-radius: 0 30px;
 }
 .message-description h2 {
@@ -520,7 +521,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
 	width: 100%;
 }
 .about-box h3 {
-	color:#001f46;
+	color:#BC1823;
 	}
 .about-box figure {
   border: 1px solid #e9e6e6;
@@ -545,7 +546,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
   margin: 0 0 10px;
 }
 .about-list li i {
-  color: #001f46;
+  color: #BC1823;
   float: left;
   font-size: 14px;
   font-weight: 700;
@@ -582,7 +583,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
   border-radius:0 15px;
 }
 .call-back .btn-default:hover {
-  background: #001f46;
+  background: #BC1823;
   color:#fff;	
 	}
 /*
@@ -629,7 +630,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
   font-size: 20px;
   margin: 20px 0 10px;
   padding-bottom: 6px;
-  color:#001f46;
+  color:#BC1823;
 }
 .single-service-box p {
   font-size: 13px;
@@ -646,7 +647,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
 ================================================
 */
 .counters:before {
-	background: #001f46;
+	background: #BC1823;
 	bottom: 0;
 	content: "";
 	left: 0;
@@ -745,7 +746,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
   display:inline-block;
 }
 .team_social_bar > a {
-  background: #001f46;
+  background: #BC1823;
   border-radius: 3px;
   color: #ffffff;
   height: 35px;
@@ -768,7 +769,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
 ================================================
 */
 .testimonials:before {
-  background: #001f46;
+  background: #BC1823;
   bottom: 0;
   content: "";
   left: 0;
@@ -825,7 +826,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
 }
 .tes-wrapper h3 {
 	font-weight: 600;
-	color: #001f46;
+	color: #BC1823;
 	font-size: 20px;
 	margin:0 0 15px;
 }
@@ -954,7 +955,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
 }
 .portfolio-filter li.active, .portfolio-filter li:hover {
 	border:none;
-	color:#001f46;
+	color:#BC1823;
 	}
 .portfolio-filter li {
 	display: inline-table;
@@ -1035,7 +1036,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
 	background: #fff
 }
 .blog-wrapper .single-post-content a {
-	color: #001f46
+	color: #BC1823
 }
 .blog-wrapper .single-post-content h4 {
   margin-top: 15px;
@@ -1049,7 +1050,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
   font-size: 12px;
   padding: 8px 12px;
   text-transform:capitalize;
-  background:#001f46;
+  background:#BC1823;
   border-radius:0 15px;
 }
 .blog-wrapper a.blog-btn:hover {
@@ -1081,7 +1082,7 @@ a.welcome-control:focus, a.welcome-control:hover i {
 ================================================
 */
 .contactus:before {
-  background: #001f46;
+  background: #BC1823;
   bottom: 0;
   content: "";
   left: 0;
@@ -1181,7 +1182,7 @@ textarea.form-control {
 	border:none;
 }
 .btn-contact:hover {
-    background-color: #001f46;
+    background-color: #BC1823;
     color: #fff;
 }
 .google-map {
@@ -1209,7 +1210,7 @@ footer {
 	background:#f2f5f9;
 }
 footer p {
-	color: #001f46;
+	color: #BC1823;
 	text-align: center;
 	margin: 0;
 }
